complete the functionality of listing page and changes in home slider

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -76,5 +76,7 @@
 <!--============== Copyright Section End ==============-->
 
 <!-- Scroll to top -->
-<div class="scroll-top-vertical xs-mx-none" id="scroll">Go Top <i class="ms-2 fa-solid fa-arrow-right-long"></i></div>
+<div class="scroll-top-vertical xs-mx-none" id="scroll">
+    <i class="fa-solid fa-arrow-right-long"></i>
+</div>
 <!-- End Scroll To top -->
