--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
                                 <div class="col">
                                         <nav
                                                 class="navbar navbar-expand-lg nav-white nav-primary-hover nav-line-active">
-                                                <a class="navbar-brand"><img class="nav-logo"
+                                                <a class="navbar-brand" routerLink="/"><img class="nav-logo"
                                                                 src="assets/assets/images/logo/logo-white.png"
                                                                 alt="Image not found !"></a>
                                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -18,16 +18,16 @@
                                                 </button>
                                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                                         <ul class="navbar-nav ms-auto">
-                                                                <li class="nav-item">
+                                                                <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/">Home</a>
                                                                 </li>
-                                                                <li class="nav-item">
+                                                                <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/about">About Us</a>
                                                                 </li>
-                                                                <li class="nav-item">
+                                                                <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/listing">Listing</a>
                                                                 </li>
-                                                                <li class="nav-item">
+                                                                <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
                                                         </ul>
@@ -42,13 +42,13 @@
 
 
 <!--============== Header Section Start ==============-->
-<header *ngIf="!isHome" class="header-style nav-on-top bg-white">
+<header *ngIf="!isHome" class="header-style nav-on-top bg-white fixed-top">
         <div class="main-nav">
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
-                            <a class="navbar-brand" href="#"><img class="nav-logo" src="assets/assets/images/logo/logo1.png" alt="Image not found !"></a>
+                            <a class="navbar-brand" routerLink="/"><img class="nav-logo" src="assets/assets/images/logo/logo1.png" alt="Image not found !"></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon flaticon-menu flat-small text-primary"></span>
                               </button>
@@ -57,13 +57,13 @@
                                         <li class="nav-item">
                                                 <a class="nav-link" routerLink="/">Home</a>
                                         </li>
-                                        <li class="nav-item">
+                                        <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/about">About Us</a>
                                         </li>
-                                        <li class="nav-item">
+                                        <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/listing">Listing</a>
                                         </li>
-                                        <li class="nav-item">
+                                        <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/contact">Contact Us</a>
                                         </li>
                                 </ul>
