--- a/src/assets/assets/css/style.css
+++ b/src/assets/assets/css/style.css
@@ -3382,12 +3382,12 @@ Deshboard Style Start
 }
 
 .fileupload_label {
-    background: transparent;
+    /* background: transparent; */
     cursor: pointer;
     font-weight: 400;
     padding: 70px 0;
     text-align: center;
-    background: var(--theme-light-color);
+    background: #eeece9;
     width: 100%;
     -moz-transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
